# Hackathon2026

./: canny.env  docker-compose.yml  hardware.env  lane.env  mongo-init.js  start-camera.sh
backend/: .dockerignore  Dockerfile  package.json  server.js
backend/canny-edge-detection-main/: .gitignore  lane_dynamic_center.py  test_1_improved.py  test_1_improved.py.bak
backend/detect-object/: Dockerfile  detector_service.py  detector_service.py.save  requirements.txt
backend/detect-road-sign/: CMakeLists.txt  Dockerfile
backend/detect-road-sign/src/: detector.cpp  detector.hpp  main.cpp  neon_preprocess.S  neon_preprocess.h  v4l2_capture.cpp  v4l2_capture.hpp
backend/hardware/: Dockerfile  camera_mjpeg.py  config.json  daemon.py  gpio_handle.py  line_follower.py  motor_control.py  odometry.py  requirements.txt  rfid_reader.py  road_sign_detector.py
backend/line_following/: best_unet.pth  test2.py
backend/src/controllers/: hardwareController.js  mapController.js  orderController.js  productController.js  rfidController.js  vehicleController.js
backend/src/entities/: DeliveryLog.js  MapPoint.js  Notification.js  Order.js  Product.js  Rfid.js  User.js  Vehicle.js
backend/src/middleware/: auth.js  errorHandler.js
backend/src/routes/: authRoutes.js  deliveryLogRoutes.js  hardwareRoutes.js  index.js  mapRoutes.js  notificationRoutes.js  orderRoutes.js  productRoutes.js  rfidRoutes.js  vehicleRoutes.js
backend/src/services/: authService.js  deliveryLogService.js  hardwareService.js  mapService.js  notificationService.js  orderService.js  productService.js  rfidService.js  vehicleService.js
backend/src/socket/: socketHandler.js
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: CameraView.js  Cart.js  DemoMap.js  HardwareStatus.js  MotorControl.js  Notification.js  NotificationBell.js  OrderList.js  ProductCard.js
frontend/src/contexts/: AuthContext.js
frontend/src/layouts/: MainLayout.js
frontend/src/pages/: AdminDashboard.js  AdminDetectPage.js  AdminLogsPage.js  CustomerOrderPage.js  CustomerPage.js  DevPage.js  LoginPage.js  MapBuilderPage.js  MapPage.js  MotorCalibrationPage.js  MyOrdersPage.js  RfidPage.js  StaffCameraPage.js  StaffControlPage.js  StaffOrdersPage.js  StaffPage.js
frontend/src/services/: api.js  socket.js
(+1 files in other folders)
